# BasicOpenGL

./: .gitignore  CMakeLists.txt
Shaders/: fragmentShader.glsl  vertexShader.glsl
include/: Camera.h  Light.h  Shader.h
src/: Camera.cpp  Light.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
